remove the shell

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,11 @@ phases:
       - pip install pipenv
   pre_build:
     commands:
-      - pipenv shell
+      - echo "venv $VIRTUAL_ENV"
       - pipenv --python 3.6
       - pipenv install
       - mkdir -p build
+      - VIRTUAL_ENV=$(pipenv --venv)
       - cp -r $VIRTUAL_ENV/lib/python3.6/site-packages/* build/
       - cp -r utils build/
       - cp -r pipeline_lambda build/
