--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,8 +17,8 @@ phases:
       - cp -r $VIRTUAL_ENV/lib/python3.3/site-packages/* build/
       - cp -r utils build/
       - cp -r pipeline_lambda/pipeline_lambda.py build/index.py
-      - source $VIRTUAL_ENV/bin/activate
-      - python template/deploy-lambda.py > build/template.json
+      - cp template/deploy-lambda.py build/
+      - python build/deploy-lambda.py > build/template.json
 
 artifacts:
   files:
