--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   install:
     commands:
       - pip install --upgrade pip
-      - pip install pipenv
+      - pip install pipenv==2018.10.13 #test
   build:
     commands:
       - pip --version #test
