--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,8 @@ env:
     SHELL: "/bin/bash"
 phases:
   install:
+    runtime-versions:
+      python: 3.7
     commands:
       - pip install --upgrade pip
       - pip install pipenv==2018.10.13 #test
